# klavaro_fork

./: AUTHORS  ChangeLog  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h.in  configure  configure.ac
data/: C.paragraphs  Makefile.am  Makefile.in  dvorak_tr_F.kbd  gurmukhi_in_jhelumShift.kbd  klavaro.appdata.xml.in  klavaro.desktop.in  klavaro.glade  klavaro.ui  pt_BR.paragraphs  qwerty_ca_quebec.kbd  qwerty_gr.kbd  sv.paragraphs
data/icons/: Makefile.in
doc/: Makefile.in  klavaro.1
gtkdatabox/: Makefile.am  Makefile.in
po/: LINGUAS  Makefile.in.in  Makevars  POTFILES.in  POTFILES.skip  ar.po  bg.po  bn.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fi.po  fr.po  gl.po  hr.po  hu.po  it.po  kk.po  ky.po  nb.po  nl.po  pa.po  pl.po  pt_BR.po  ru.po  sl.po  sv.po  te.po  uk.po  ur.po  vi.po  wo.po  zh_CN.po
src/: Makefile.am  Makefile.in  adaptability.c  callbacks.c  cursor.c  fluidness.c  keyboard.c  main.c  plot.c  translation.c  translation.h  tutor.c  tutor.h  velocity.c
trunk/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h.in  configure  configure.ac  configure.in
trunk/data/: C.paragraphs  Makefile.am  Makefile.in  ar.paragraphs  el.paragraphs  en_GB.paragraphs  gurmukhi_in_jhelum.kbd  klavaro.appdata.xml.in  klavaro.desktop.in  klavaro.glade  klavaro.ui  pa.paragraphs  pt_BR.paragraphs  qwerty_tr.kbd  ru.paragraphs  sv.words
trunk/data/icons/: Makefile.in
trunk/data/icons/hicolor/: Makefile.in
trunk/data/icons/hicolor/16x16/: Makefile.in
trunk/data/icons/hicolor/16x16/apps/: Makefile.in
trunk/data/icons/hicolor/22x22/: Makefile.in
trunk/data/icons/hicolor/22x22/apps/: Makefile.in
trunk/data/icons/hicolor/24x24/: Makefile.in
trunk/data/icons/hicolor/24x24/apps/: Makefile.in
trunk/data/icons/hicolor/32x32/: Makefile.in
trunk/data/icons/hicolor/32x32/apps/: Makefile.in
trunk/data/icons/hicolor/48x48/: Makefile.in
trunk/data/icons/hicolor/48x48/apps/: Makefile.in
trunk/data/icons/hicolor/64x64/apps/: Makefile.in
trunk/data/icons/hicolor/96x96/: Makefile.in
trunk/doc/: Makefile.in  klavaro.1
trunk/gtkdatabox/: Makefile.in
trunk/po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  ar.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fi.po  fr.po  gl.po  hu.po  it.po  kk.po  klavaro.pot  ky.po  nb.po  nl.po  pl.po  pt_BR.po  ru.po  sl.po  sv.po  te.po  uk.po  ur.po  vi.po  wo.po  zh_CN.po
trunk/src/: Makefile.in  adaptability.c  basic.c  basic.h  callbacks.c  callbacks.h  cursor.c  keyboard.c  keyboard.h  main.c  plot.c  plot.h  top10.c  translation.c  translation.h  tutor.c  tutor.h  velocity.c
www/cgi-bin/: klavaro_rangilo.c  rangego.c
www/htdocs/: enirpagho.css  ghenerale.css  (+1 more)
(+155 files in other folders)
