dnl Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([klavaro],[1.9.8],[fefcas@gmail.com])
AC_CONFIG_SRCDIR([config.h.in])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([-Wall])

AC_SEARCH_LIBS([strerror],[cposix])
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
dnl For Windows, comment out this one (then do an "autoreconf"):
IT_PROG_INTLTOOL ([0.23])
AC_CHECK_PROG([GTKBLDRCONV], [gtk-builder-convert], [gtk-builder-convert], [false])

AC_HEADER_STDC
AC_CHECK_HEADERS([locale.h stdlib.h string.h unistd.h curl/curl.h gtkdatabox.h])

dnl For Linux:
pkg_modules="gtk+-2.0 >= 2.16.0"
dnl For Windows:
dnl pkg_modules="gtk+-2.0 >= 2.16.0 gtkdatabox >= 0.9.1.1"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

AC_CHECK_LIB([gtkdatabox], [gtk_databox_new])
AC_CHECK_LIB([curl], [curl_global_init])
AC_CHECK_LIB([m], [sqrt])

GETTEXT_PACKAGE=klavaro
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package.])

dnl Add the languages which your application supports here.
ALL_LINGUAS="ar bg bn cs da de en_GB eo eu es fr gl hu it kk ky nb nl pl pt_BR ru sv te uk ur vi wo zh_CN"
AM_GLIB_GNU_GETTEXT

AM_CONDITIONAL(IS_WIN32, test `uname` = "MINGW32_NT-6.1")
AM_CONDITIONAL(IS_POSIX, test  `uname` != "MINGW32_NT-6.1" -a `uname` != "Darwin")

AC_CONFIG_FILES([Makefile
src/Makefile
po/Makefile.in
doc/Makefile
data/Makefile
data/icons/Makefile
data/icons/hicolor/Makefile
data/icons/hicolor/16x16/Makefile
data/icons/hicolor/16x16/apps/Makefile
data/icons/hicolor/22x22/Makefile
data/icons/hicolor/22x22/apps/Makefile
data/icons/hicolor/24x24/Makefile
data/icons/hicolor/24x24/apps/Makefile
data/icons/hicolor/32x32/Makefile
data/icons/hicolor/32x32/apps/Makefile
data/icons/hicolor/48x48/Makefile
data/icons/hicolor/48x48/apps/Makefile
])
AC_OUTPUT

